<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UploadFragment">

    <TextView
        android:id="@+id/upload_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_title" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/upload_textView"
        android:orientation="vertical" >

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="showCourseSelectionDialog"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_course"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag" />

        <Spinner
            android:id="@+id/tag_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file" />

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="180dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/uploadInput_layout"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/attach_imageView"
                        android:src="@drawable/baseline_upload_file_24"
                        android:layout_width="55dp"
                        android:layout_height="80dp"
                        android:contentDescription="icon" />

                    <Button
                        android:id="@+id/attach_button"
                        style="@style/Widget.Material3.Button.IconButton.Filled"
                        app:layout_constraintStart_toEndOf="@id/attach_imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginVertical="16dp"
                        android:backgroundTint="@color/darkred"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/attach_file"
                        app:icon="@drawable/baseline_attach_file_24" />
                </LinearLayout>

                <TextView
                    app:layout_constraintTop_toBottomOf="@id/uploadInput_layout"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attach_file_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/share_file"
        android:textSize="18sp"
        android:backgroundTint="@color/darkred"
        app:icon="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>