<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Main.ProfileFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            app:shapeAppearanceOverlay="@style/circular_image"
            app:strokeWidth="3dp"
            app:strokeColor="@color/darkred"
            android:contentDescription="@string/avatar_description"
            />

        <TextView
            android:id="@+id/user_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_first_name"

            app:layout_constraintTop_toBottomOf="@+id/user_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_lastname"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/user_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_last_name"

            app:layout_constraintTop_toBottomOf="@+id/user_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_firstname"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="10dp"

            android:layout_marginStart="5sp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_lastname" />

        <TextView
            android:id="@+id/user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/darkred"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

        <LinearLayout
            android:id="@+id/darkModeLayout"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/darkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/dark_mode"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/dark_mode"
                android:textOn="@string/light_mode"
                android:checked="false"
                app:thumbTint="@color/darkred"
                app:trackTint="@color/grey"
                android:padding="16dp" />
        </LinearLayout>



        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_output_24"
            android:drawableTint="@color/white"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:elevation="3dp"
            android:backgroundTint="@color/darkred"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/darkModeLayout"/>

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_no_accounts_24"
            android:drawableTint="@color/white"
            android:text="@string/delete_account"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:elevation="3dp"
            android:backgroundTint="@color/darkred"
            android:layout_marginBottom="250dp"
            app:layout_constraintTop_toBottomOf="@+id/logout_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>